
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
size_t
base64_decode(void *vdst, size_t sizeof_dst,
              const void *vsrc, size_t sizeof_src)
{
 static const unsigned char rstr[] = {
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 62, 0xFF, 0xFF, 0xFF, 63,
  52, 53, 54, 55, 56, 57, 58, 59,
        60, 61, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0, 1, 2, 3, 4, 5, 6,
        7, 8, 9, 10, 11, 12, 13, 14,
  15, 16, 17, 18, 19, 20, 21, 22,
        23, 24, 25, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 26, 27, 28, 29, 30, 31, 32,
        33, 34, 35, 36, 37, 38, 39, 40,
  41, 42, 43, 44, 45, 46, 47, 48,
        49, 50, 51, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
  0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
        0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF,
 };
    size_t i = 0;
    size_t d = 0;
    unsigned char *dst = (unsigned char *)vdst;
    const unsigned char *src = (const unsigned char *)vsrc;


 while (i < sizeof_src) {
        unsigned b;
  unsigned c=0;


  while (i<sizeof_src && (c = rstr[src[i]]) > 64)
   i++;
  if (src[i] == '=' || i++ >= sizeof_src)
   break;
  b = (c << 2) & 0xfc;

  while (i<sizeof_src && (c = rstr[src[i]]) > 64)
   i++;
  if (src[i] == '=' || i++ >= sizeof_src)
   break;
  b |= (c>>4) & 0x03;
  if (d<sizeof_dst)
   dst[d++] = (unsigned char)b;
  if (i>=sizeof_src)
   break;


  b = (c<<4) & 0xF0;
  while (i<sizeof_src && src[i] != '=' && (c = rstr[src[i]]) > 64)
   ;
  if (src[i] == '=' || i++ >= sizeof_src)
   break;
  b |= (c>>2) & 0x0F;
  if (d<sizeof_dst)
   dst[d++] = (unsigned char)b;
  if (i>=sizeof_src)
   break;


  b = (c<<6) & 0xC0;
  while (i<sizeof_src && src[i] != '=' && (c = rstr[src[i]]) > 64)
   ;
  if (src[i] == '=' || i++ >= sizeof_src)
   break;
  b |= c;
  if (d<sizeof_dst)
   dst[d++] = (unsigned char)b;
  if (i>=sizeof_src)
   break;
 }

 if (d<sizeof_dst)
  dst[d] = '\0';
 return d;
}
